--- a/build.gradle
+++ b/build.gradle
@@ -90,15 +90,15 @@ dependencies {
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'net.sf.jcommon', name: 'jcommon', version: '1.0.1'
     compile group: 'org.jdom', name: 'jdom', version: '1.1.3'
-    compile group: 'org.eclipse.jetty', name: 'jetty-http', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-io', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-rewrite', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-security', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-util', version: '9.3.11.v20160721'
-    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.3.11.v20160721'
+    compile group: 'org.eclipse.jetty', name: 'jetty-http', version: '9.4.31.v20200723'
+    compile group: 'org.eclipse.jetty', name: 'jetty-io', version: '9.4.31.v20200723'
+    compile group: 'org.eclipse.jetty', name: 'jetty-rewrite', version: '9.4.31.v20200723'
+    compile group: 'org.eclipse.jetty', name: 'jetty-security', version: '9.4.31.v20200723'
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.31.v20200723'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.31.v20200723'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlets', version: '9.4.31.v20200723'
+    compile group: 'org.eclipse.jetty', name: 'jetty-util', version: '9.4.31.v20200723'
+    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.4.31.v20200723'
     compile group: 'org.eclipse.jetty', name: 'jetty-eventsource-servlet', version: '1.0.0'
     compile group: 'org.jfree', name: 'jfreechart', version: '1.0.19'
     compile group: 'net.java.dev.jna', name: 'jna', version: '4.1.0'
@@ -141,6 +141,7 @@ dependencies {
     compile group: 'org.unbescape', name: 'unbescape', version: '1.0'
     compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.+'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.+'
 }
 
 tasks.withType(Javadoc) {
